minikube_dash_ingress/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
  - host: braxtondash.com 
    http:
      paths:
      - path:
        backend:
          serviceName: kubernetes-dashboard #service is internal as type ClusterIP
          servicePort: 80
# minikube addons enable ingress 
# alter /etc/hosts
